--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
-    "express-validator": "^6.9.2",
+    "axios": "^1.3.2",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-validator": "^6.14.3",
     "http": "0.0.1-security",
-    "mime-types": "^2.1.32",
-    "qrcode": "^1.4.4",
-    "socket.io": "2.3.0",
-    "whatsapp-web.js": "latest"
+    "mime-types": "^2.1.35",
+    "qrcode": "^1.5.1",
+    "socket.io": "4.6.0",
+    "whatsapp-web.js": "1.19.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.20"
   }
 }
