--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
+    "slim": "^0.11.1",
     "express": "^4.18.2",
     "qrcode": "^1.5.1",
-    "socket.io": "4.6.0",
-    "whatsapp-web.js": "1.8.1"
+    "socket.io": "^4.6.0",
+    "whatsapp-web.js": "^1.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
