--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "slim": "^0.11.1",
-    "whatsapp-web.js": "latest"
+    "whatsapp-web.js": "1.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
