--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
-    
-    "whatsapp-web.js": "1.8.1"
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "express-validator": "^6.9.2",
+    "http": "0.0.1-security",
+    "mime-types": "^2.1.32",
+    "qrcode": "^1.4.4",
+    "socket.io": "2.3.0"
   },
   "devDependencies": {
   }
