--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "http": "0.0.1-security",
     "mime-types": "^2.1.32",
     "qrcode": "^1.4.4",
-    "socket.io": "2.3.0",
-    "whatsapp-web.js": "latest"
+    "socket.io": "2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
